--- a/autocomplete-app/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/autocomplete-app/src/app/components/shopping-cart/shopping-cart.component.html
@@ -9,6 +9,7 @@
       />
       <app-autocomplete
         *ngIf="productsSuggestions$ | async as productSuggestions"
+        (nextPage)='onScroll()'
         [productSuggestions]="productSuggestions"
         [isAutocompleteHidden]="isAutocompleteHidden"
         (addToCart)="addToCart($event)"
